# jsonschema2cppview

./: CMakeLists.txt  add_json_schemas.cmake  index.ts  jsonschema2cppview_nlohmann.cpp  jsonschema2cppview_nlohmann.hpp  package-lock.json  package.json  test.hpp
test/: CMakeLists.txt
test/nested/: CMakeLists.txt  nested.cpp  nested.schema.json
test/refs/: CMakeLists.txt  simple.schema.json  with_ref.schema.json
test/simple/: CMakeLists.txt  simple.schema.json
